# api/docs/swagger.json
@@ -170,7 +170,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UpdateBookId"
+                            "$ref": "#/definitions/models.UpdateBookSwag"
                         }
                     }
                 ],
@@ -405,7 +405,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UpdateCategoryId"
+                            "$ref": "#/definitions/models.UpdateCategorySwag"
                         }
                     }
                 ],
@@ -479,6 +479,12 @@
         "models.Book": {
             "type": "object",
             "properties": {
+                "categories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Category1"
+                    }
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -502,6 +508,12 @@
         "models.Category": {
             "type": "object",
             "properties": {
+                "categories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CategoryBook"
+                    }
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -516,13 +528,33 @@
                 }
             }
         },
-        "models.CreateBook": {
+        "models.Category1": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CategoryBook": {
             "type": "object",
             "properties": {
                 "created_at": {
                     "type": "string"
                 },
                 "description": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "string"
                 },
                 "name": {
@@ -536,16 +568,36 @@
                 }
             }
         },
-        "models.CreateCategory": {
+        "models.CreateBook": {
             "type": "object",
             "properties": {
-                "created_at": {
+                "category_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "description": {
                     "type": "string"
                 },
                 "name": {
                     "type": "string"
                 },
-                "updated_at": {
+                "price": {
+                    "type": "number"
+                }
+            }
+        },
+        "models.CreateCategory": {
+            "type": "object",
+            "properties": {
+                "books_id": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "name": {
                     "type": "string"
                 }
             }
@@ -559,7 +611,7 @@
                 "books": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.Book"
+                        "$ref": "#/definitions/models.UpdateBook"
                     }
                 },
                 "count": {
@@ -570,10 +622,10 @@
         "models.GetListCategoryResponse": {
             "type": "object",
             "properties": {
-                "categorys": {
+                "categories": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.Category"
+                        "$ref": "#/definitions/models.UpdateCategory"
                     }
                 },
                 "count": {
@@ -581,7 +633,24 @@
                 }
             }
         },
-        "models.UpdateBookId": {
+        "models.UpdateBook": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                }
+            }
+        },
+        "models.UpdateBookSwag": {
             "type": "object",
             "properties": {
                 "description": {
@@ -595,7 +664,18 @@
                 }
             }
         },
-        "models.UpdateCategoryId": {
+        "models.UpdateCategory": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdateCategorySwag": {
             "type": "object",
             "properties": {
                 "name": {
