# models/book.go
@@ -5,33 +5,27 @@ type BookPrimeryKey struct {
 }
 
 type CreateBook struct {
+	Name        string   `json:"name"`
+	Price       float64  `json:"price"`
+	Description string   `json:"description"`
+	CategoryIds []string `json:"category_ids"`
+}
+type CategoryBook struct {
+	Id          string  `json:"id"`
 	Name        string  `json:"name"`
 	Price       float64 `json:"price"`
 	Description string  `json:"description"`
 	CreatedAt   string  `json:"created_at"`
 	UpdatedAt   string  `json:"updated_at"`
 }
-
 type Book struct {
-	Id          string  `json:"id"`
-	Name        string  `json:"name"`
-	Price       float64 `json:"price"`
-	Description string  `json:"description"`
-	CreatedAt   string  `json:"created_at"`
-	UpdatedAt   string  `json:"updated_at"`
-}
-type BookC struct {
-	Id          string  `json:"id"`
-	Name        string  `json:"name"`
-	Price       float64 `json:"price"`
-	Description string  `json:"description"`
-	Categorys   []CategoryName
-	CreatedAt   string `json:"created_at"`
-	UpdatedAt   string `json:"updated_at"`
-}
-type CategoryName struct {
-	Id   string `json:"id"`
-	Name string `json:"Category"`
+	Id          string       `json:"id"`
+	Name        string       `json:"name"`
+	Price       float64      `json:"price"`
+	Description string       `json:"description"`
+	CreatedAt   string       `json:"created_at"`
+	UpdatedAt   string       `json:"updated_at"`
+	Categories  []*Category1 `json:"categories"`
 }
 
 type UpdateBook struct {
@@ -40,7 +34,8 @@ type UpdateBook struct {
 	Price       float64 `json:"price"`
 	Description string  `json:"description"`
 }
-type UpdateBookId struct {
+
+type UpdateBookSwag struct {
 	Name        string  `json:"name"`
 	Price       float64 `json:"price"`
 	Description string  `json:"description"`
@@ -52,9 +47,8 @@ type GetListBookRequest struct {
 }
 
 type GetListBookResponse struct {
-	Count     int64      `json:"count"`
-	Books     []Book     `json:"books"`
-	Categorys []Category `json:"categorys"`
+	Count int64         `json:"count"`
+	Books []*UpdateBook `json:"books"`
 }
 
 type Empty struct{}
