# models/category.go
@@ -5,35 +5,29 @@ type CategoryPrimeryKey struct {
 }
 
 type CreateCategory struct {
-	Name      string `json:"name"`
-	CreatedAt string `json:"created_at"`
-	UpdatedAt string `json:"updated_at"`
+	Name     string   `json:"name"`
+	Books_id []string `json:"books_id"`
 }
-
 type Category struct {
+	Id        string          `json:"id"`
+	Name      string          `json:"name"`
+	CreatedAt string          `json:"created_at"`
+	UpdatedAt string          `json:"updated_at"`
+	Books     []*CategoryBook `json:"categories"`
+}
+type Category1 struct {
 	Id        string `json:"id"`
 	Name      string `json:"name"`
 	CreatedAt string `json:"created_at"`
 	UpdatedAt string `json:"updated_at"`
-}
-
-type CategoryB struct {
-	Id        string `json:"id"`
-	Name      string `json:"name"`
-	BookInfos []BookInfo
-}
-type BookInfo struct {
-	Id          string  `json:"id"`
-	Name        string  `json:"name"`
-	Price       float64 `json:"price"`
-	Description string  `json:"description"`
 }
 
 type UpdateCategory struct {
 	Id   string `json:"id"`
 	Name string `json:"name"`
 }
-type UpdateCategoryId struct {
+
+type UpdateCategorySwag struct {
 	Name string `json:"name"`
 }
 
@@ -43,6 +37,6 @@ type GetListCategoryRequest struct {
 }
 
 type GetListCategoryResponse struct {
-	Count     int64      `json:"count"`
-	Categorys []Category `json:"categorys"`
+	Count      int64             `json:"count"`
+	Categories []*UpdateCategory `json:"categories"`
 }
